--- a/android/src/main/res/layout/tuiplayer_short_video_overlay_layer.xml
+++ b/android/src/main/res/layout/tuiplayer_short_video_overlay_layer.xml
@@ -23,7 +23,6 @@
             android:baselineAligned="false"
             android:clipChildren="false"
             android:clipToPadding="false"
-            android:paddingBottom="20dp"
             android:clickable="true"
             >
 
@@ -264,6 +263,7 @@
             android:id="@+id/tuiplayer_overlay_progress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:layout_marginBottom="10dp"
             android:layout_marginHorizontal="10dp"/>
 
